--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -1,19 +1,20 @@
 <%= render 'chose_seats_and_more_partial/nav' %>
 <div class="container-body-chose-seats-and-more">
   <div class="container-seats-type-tickets-bomboniere-payment">
-    <div class="div-svg-seats-type-tickets-bomboniere-payment">
+    <div class="div-svg-chose-of-seats">
       <%= render "chose_seats_and_more_svg_partial/svg_seats" %>
     </div>
-    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
-    <div class="div-svg-seats-type-tickets-bomboniere-payment">
+    <div class="line-white-1"></div>
+    <span class="span-chose-ofseats">ESCOLHA DE ASSENTOS</span>
+    <div class="div-svg-tickets">
       <%= render "chose_seats_and_more_svg_partial/svg_tickets" %>
     </div>
-    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
-    <div class="div-svg-seats-type-tickets-bomboniere-payment">
+    <div class="line-white-1"></div>
+    <div class="div-svg-bomboniere">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
     </div>
-    <div class="line-white-seats-type-tickets-bomboniere-payment"></div>
-    <div class="div-svg-seats-type-tickets-bomboniere-payment">
+    <div class="line-white-1"></div>
+    <div class="div-svg-payment">
       <%= render "chose_seats_and_more_svg_partial/svg_payment" %>
     </div>
   </div>
@@ -31,6 +32,8 @@
         <div class="container-svg-time-name">
           <%= render "chose_seats_and_more_svg_partial/svg_time" %>
           <span class="span-time-chose-seats-and-more"></span>
+        </div>
+        <div class="container-name-movie-location-hour-date">
         </div>
       </div>
       <div class="container-seats-chose-seats-and-more-main">
@@ -124,7 +127,7 @@
       <div class="container-payment-order-sumarry">
         <div class="container-items-order-sumarry">
           <span>Itens</span>
-          <span>0</span>
+          <span class="span-itens-values-seats">0</span>
         </div>
         <div class="container-total-rate-order-sumarry">
           <span>Total taxa</span>
