criando css order_summaru do partial chose_movie_theater

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -9,6 +9,7 @@
 @import './chose_seats_and_more/nav.css';
 @import './chose_seats_and_more/login_or_register.css';
 @import './chose_movie_theater_partial/caption_all_chose_seats.css';
+@import './chose_movie_theater_partial/order_summary.css';
 
 body {
   background-color: rgb(4 18 24) !important;
