alteração javascript index.js e outros

--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  /* position: relative; */
 }
 
 .container-seats-type-tickets-bomboniere-payment {
@@ -462,4 +463,54 @@
   .container-day-week-hour-order-summary {
     font-size: 13px;
   }
+}
+
+.container-back-skip {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  /* left: 0; */
+  bottom: 0;
+  width: 100%;
+  height: 4rem;
+  padding: 0px 5px;
+  background: rgb(52 60 70);
+  z-index: 10;
+}
+
+/* .container-button-back {
+
+} */
+
+.button-back {
+  border: 2px solid rgb(102, 102, 102);
+  /* border: 2px solid rgb(152, 170, 236); */
+  /* color: rgb(152, 170, 236); */
+  color: rgb(102, 102, 102);
+  background: transparent;
+  border-radius: 8px;
+  padding: 9px 30px;
+  font-weight: 600;
+
+  /* solid rgb(152, 170, 236) color active */
+}
+
+/* .button-back:hover {
+  border-color: rgb(164, 179, 235);
+  color: rgb(164, 179, 235);
+} */
+
+.button-skip {
+  color: rgb(33, 38, 45);
+  background-image: linear-gradient(to right, rgb(255, 206, 0), rgb(255, 136, 0));
+  border-radius: 8px;
+  padding: 11px 30px;
+  font-weight: 600;
+  border: none;
+}
+
+.button-skip:hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    linear-gradient(to right, rgb(255, 206, 0), rgb(255, 136, 0));
 }
