--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -64,4 +64,9 @@
     </div>
     <%= render "chose_seats_and_more_partial/order_summary" %>
   </div>
+  <div class="container-back-skip">
+    <div class="container-button-back"><button class="button-back">VOLTAR</button></div>
+    <div>TESTE</div>
+    <div class="container-button-skip"><button class="button-skip">AVANÇAR</button></div>
+  </div>
 </div>
