--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -441,8 +441,16 @@
 
 .container-seats-chosen-summary-order {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   border-top: 1px solid rgb(102, 102, 102);
+  gap: 0px;
+}
+
+.span-seats-name-summary-order {
+  display: flex;
+  flex-wrap: wrap;
+  white-space: normal;
+  word-wrap: break-word;
 }
 
 .span-region-name-order-summary {
@@ -465,6 +473,15 @@
   }
 }
 
+.container-img-clube-uol {
+  width: 103px;
+
+  >img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .container-back-skip {
   display: flex;
   align-items: center;
@@ -479,10 +496,6 @@
   z-index: 10;
 }
 
-/* .container-button-back {
-
-} */
-
 .button-back {
   border: 2px solid rgb(102, 102, 102);
   /* border: 2px solid rgb(152, 170, 236); */
@@ -496,10 +509,25 @@
   /* solid rgb(152, 170, 236) color active */
 }
 
-/* .button-back:hover {
-  border-color: rgb(164, 179, 235);
-  color: rgb(164, 179, 235);
-} */
+.container-all-tickets-svg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50rem;
+  height: 100%;
+}
+
+.container-ticket-svg {
+  width: 3rem;
+  /* height: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  >svg {
+    fill: rgb(204 204 204);
+  }
+}
 
 .button-skip {
   color: rgb(33, 38, 45);
