--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -63,10 +63,17 @@
       <%= render "chose_seats_and_more_partial/caption_all_chose_seats" %>
     </div>
     <%= render "chose_seats_and_more_partial/order_summary" %>
+    <div class="container-types-tickets">
+      <div class="container-clube-uol">
+        <div class="container-img-clube-uol">
+          <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1703514340/logo_header_hksemr.png" alt="clube-uol">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container-back-skip">
     <div class="container-button-back"><button class="button-back">VOLTAR</button></div>
-    <div>TESTE</div>
+    <div class="container-all-tickets-svg"></div>
     <div class="container-button-skip"><button class="button-skip">AVANÇAR</button></div>
   </div>
 </div>
