alteração css index e html

--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -68,6 +68,7 @@
         <div class="container-img-clube-uol">
           <img src="https://res.cloudinary.com/dyqsqg7pk/image/upload/v1703514340/logo_header_hksemr.png" alt="clube-uol">
         </div>
+        <p class="paragraph-clube-uol">Assinante UOL tem isenção de taxa de serviço em até 2 ingressos por mês. <span class="span-clube-uol">Saiba mais</span></p>
       </div>
     </div>
   </div>
