--- a/app/assets/stylesheets/chose_seats_and_more/index.css
+++ b/app/assets/stylesheets/chose_seats_and_more/index.css
@@ -473,13 +473,36 @@
   }
 }
 
+.container-types-tickets {
+  width: 59rem;
+}
+
+.container-clube-uol {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  padding: 0px 10px;
+  height: 5rem;
+  background: #fff;
+  border-radius: 5px;
+}
+
 .container-img-clube-uol {
-  width: 103px;
+  width: 100px;
 
   >img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
   }
+}
+
+.paragraph-clube-uol {
+  margin-bottom: 0px;
+}
+
+.span-clube-uol {
+  color: blue;
 }
 
 .container-back-skip {
