--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -83,19 +83,11 @@
           </div>
           <div class="container-more-less">
             <div class="container-less">
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none" class="injected-svg" data-src="/static/images/icons/Minus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Icon / Simple / Minus">
-                  <path id="Minus-272" fill-rule="evenodd" clip-rule="evenodd" d="M2.61 6.42707C2.41584 6.42707 2.25 6.20711 2.25 6C2.25 5.79289 2.4074 5.625 2.60156 5.625L9.39844 5.625C9.5926 5.625 9.75 5.79289 9.75 6C9.75 6.20711 9.5926 6.42707 9.39844 6.42707H2.61Z" fill="#041218"></path>
-                </g>
-              </svg>
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
             </div>
             <span class="count-number-tickets">0</span>
             <div class="container-more">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" class="injected-svg" data-src="/static/images/icons/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Icon / Simple / Plus">
-                  <path id="Plus-273" fill-rule="evenodd" clip-rule="evenodd" d="M9.57129 3.90234C9.57129 3.19922 8.45512 3.19922 8.45512 3.90234V8.47266H3.90234C3.19922 8.47266 3.19922 9.56717 3.90234 9.56717H8.45005V14.0977C8.45005 14.8008 9.57129 14.8008 9.57129 14.0977V9.5874H14.0977C14.8008 9.5874 14.8008 8.47266 14.0977 8.47266H9.57129V3.90234Z" fill="#041218"></path>
-                </g>
-              </svg>
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
             </div>
           </div>
         </div>
