--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -82,11 +82,11 @@
             </div>
           </div>
           <div class="container-more-less">
-            <div class="container-less">
+            <div class="container-less-inteira">
               <%= render "chose_seats_and_more_svg_partial/svg_less" %>
             </div>
-            <span class="count-number-tickets">0</span>
-            <div class="container-more">
+            <span class="count-number-tickets-inteira">0</span>
+            <div class="container-more-inteira">
               <%= render "chose_seats_and_more_svg_partial/svg_more" %>
             </div>
           </div>
@@ -99,6 +99,15 @@
             <div class="container-paragraph-and-price">
               <span>Meia ELO</span>
               <span>R$ 21,76</span>
+            </div>
+          </div>
+          <div class="container-more-less">
+            <div class="container-less-meia-elo">
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+            </div>
+            <span class="count-number-tickets-meia-elo">0</span>
+            <div class="container-more-meia-elo">
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
             </div>
           </div>
         </div>
