--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -9,6 +9,7 @@
     <div class="div-svg-tickets">
       <%= render "chose_seats_and_more_svg_partial/svg_tickets" %>
     </div>
+    <span class="span-types-tickets">TIPOS DE INGRESSOS</span>
     <div class="line-white-1"></div>
     <div class="div-svg-bomboniere">
       <%= render "chose_seats_and_more_svg_partial/svg_bomboniere" %>
@@ -82,11 +83,11 @@
             </div>
           </div>
           <div class="container-more-less">
-            <div class="container-less-inteira">
+            <div class="container-less-svg">
               <%= render "chose_seats_and_more_svg_partial/svg_less" %>
             </div>
-            <span class="count-number-tickets-inteira">0</span>
-            <div class="container-more-inteira">
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
               <%= render "chose_seats_and_more_svg_partial/svg_more" %>
             </div>
           </div>
@@ -102,11 +103,91 @@
             </div>
           </div>
           <div class="container-more-less">
-            <div class="container-less-meia-elo">
+            <div class="container-less-svg">
               <%= render "chose_seats_and_more_svg_partial/svg_less" %>
             </div>
-            <span class="count-number-tickets-meia-elo">0</span>
-            <div class="container-more-meia-elo">
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+            </div>
+          </div>
+        </div>
+        <div class="container-tickets">
+          <div class="container-ticket-name-price">
+            <div class="container-ticket">
+              <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
+            </div>
+            <div class="container-paragraph-and-price">
+              <span>Meia</span>
+              <span>R$ 28,16</span>
+            </div>
+          </div>
+          <div class="container-more-less">
+            <div class="container-less-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+            </div>
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+            </div>
+          </div>
+        </div>
+        <div class="container-tickets">
+          <div class="container-ticket-name-price">
+            <div class="container-ticket">
+              <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
+            </div>
+            <div class="container-paragraph-and-price">
+              <span>Meia Bradesco</span>
+              <span>R$ 28,16</span>
+            </div>
+          </div>
+          <div class="container-more-less">
+            <div class="container-less-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+            </div>
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+            </div>
+          </div>
+        </div>
+        <div class="container-tickets">
+          <div class="container-ticket-name-price">
+            <div class="container-ticket">
+              <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
+            </div>
+            <div class="container-paragraph-and-price">
+              <span>Voucher Eletrônico</span>
+              <span>R$ 0,00</span>
+            </div>
+          </div>
+          <div class="container-more-less">
+            <div class="container-less-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+            </div>
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
+            </div>
+          </div>
+        </div>
+        <div class="container-tickets">
+          <div class="container-ticket-name-price">
+            <div class="container-ticket">
+              <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
+            </div>
+            <div class="container-paragraph-and-price">
+              <span>Meia Vivo Valoriza</span>
+              <span>R$ 28,16</span>
+            </div>
+          </div>
+          <div class="container-more-less">
+            <div class="container-less-svg">
+              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
+            </div>
+            <span class="count-number-tickets">0</span>
+            <div class="container-more-svg">
               <%= render "chose_seats_and_more_svg_partial/svg_more" %>
             </div>
           </div>
