--- a/app/views/chose_seats_and_more/index.html.erb
+++ b/app/views/chose_seats_and_more/index.html.erb
@@ -78,7 +78,7 @@
               <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
             </div>
             <div class="container-paragraph-and-price">
-              <span>Inteira</span>
+              <span class="span-type-payment">Inteira</span>
               <span>R$ 38,76</span>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
             </div>
             <div class="container-paragraph-and-price">
-              <span>Meia ELO</span>
+              <span class="span-type-payment">Meia ELO</span>
               <span>R$ 21,76</span>
             </div>
           </div>
@@ -118,7 +118,7 @@
               <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
             </div>
             <div class="container-paragraph-and-price">
-              <span>Meia</span>
+              <span class="span-type-payment">Meia</span>
               <span>R$ 28,16</span>
             </div>
           </div>
@@ -138,7 +138,7 @@
               <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
             </div>
             <div class="container-paragraph-and-price">
-              <span>Meia Bradesco</span>
+              <span class="span-type-payment">Meia Bradesco</span>
               <span>R$ 28,16</span>
             </div>
           </div>
@@ -158,27 +158,7 @@
               <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
             </div>
             <div class="container-paragraph-and-price">
-              <span>Voucher Eletrônico</span>
-              <span>R$ 0,00</span>
-            </div>
-          </div>
-          <div class="container-more-less">
-            <div class="container-less-svg">
-              <%= render "chose_seats_and_more_svg_partial/svg_less" %>
-            </div>
-            <span class="count-number-tickets">0</span>
-            <div class="container-more-svg">
-              <%= render "chose_seats_and_more_svg_partial/svg_more" %>
-            </div>
-          </div>
-        </div>
-        <div class="container-tickets">
-          <div class="container-ticket-name-price">
-            <div class="container-ticket">
-              <%= render "chose_seats_and_more_partial/svg_tickets_full" %>
-            </div>
-            <div class="container-paragraph-and-price">
-              <span>Meia Vivo Valoriza</span>
+              <span class="span-type-payment">Meia Vivo Valoriza</span>
               <span>R$ 28,16</span>
             </div>
           </div>
