--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -170,68 +170,16 @@ body {
   white-space: nowrap;
 }
 
-.container-main-header-section {
-  // padding-left: 70px !important;
-  // padding-right: 70px !important;
-  // position: relative;
-}
-
 .header-custom {
-  // background-color: rgb(4, 18, 24) !important;
   background-color: rgb(11 40 53 / 27%) !important;
 }
+
 
 .container-main-highlight {
   display: flex;
   align-items: center;
   justify-content: center;
-  // background-color: rgb(16 29 41) !important;
-  // background-image: linear-gradient(to left, rgb(16 29 41), rgb(16 29 41), rgb(16 29 41));
   position: relative;
-}
-
-.container-linear-left {
-  position: absolute;
-  // right: 206px;
-  // top: 0px;
-  // right: 0;
-  z-index: 1;
-  margin-left: 1200px;
-  width: 290px;
-  height: 341px;
-
-  @media (max-width: 1507px) {
-    margin-left: 1119px;
-  }
-
-  // @media (max-width: 1426px) {
-  //   margin-left: 1079px;
-  // }
-
-  @media (max-width: 1426px) {
-    margin-left: 0px;
-    right: 0;
-    width: 205px;
-  }
-
-  background-image: linear-gradient(to left, rgb(5, 18, 24), rgb(0 0 0 / 31%) 80%, rgb(0 0 0 / 0%) 100%);
-}
-
-.container-linear-right {
-  position: absolute;
-  // left: 206px;
-  // top: 0px;
-  margin-right: 1039px;
-  width: 290px;
-  height: 341px;
-  background-image: linear-gradient(to right, rgb(5, 18, 24), rgb(0 0 0 / 31%) 80%, rgb(0 0 0 / 0%) 100%);
-  // background-image: linear-gradient(to left, rgb(16 29 41), rgb(16 29 41), rgb(16 29 41));
-
-  @media (max-width: 1400px) {
-    margin-right: 0px;
-    left: 0;
-    width: 205px;
-  }
 }
 
 .container-info-movie-highlight {
@@ -281,6 +229,42 @@ body {
 .container-img-highlight {
   width: 83rem;
   height: 340px;
+  position: relative;
+}
+
+//340px
+
+.container-img-highlight::before {
+  content: "";
+  background-image: linear-gradient(to right, rgb(5 18 24 / 79%), rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0.02) 100%);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
+}
+
+// .container-banner-background {
+//   width: 75rem;
+//   height: 260px;
+//   position: relative;
+// }
+
+@media (max-width: 1200px) {
+  .container-img-highlight {
+    width: 70%;
+    height: 260px;
+  }
+}
+
+.container-img-highlight::after {
+  content: "";
+  background-image: linear-gradient(to left, rgb(5 18 24 / 76%), rgb(0 0 0 / 0%) 80%, rgba(0, 0, 0, 0.02) 100%);
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50%;
+  height: 100%;
 }
 
 .movie-image-highlight {
